hphp/test/zend/good/Zend/tests/add_007.php.expectf

Fatal error: Uncaught exception 'InvalidOperationException' with message 'Invalid operand type was used: cannot perform this operation with vecs' in %s/add_007.php:7
Stack trace:
%A
